--- a/site/index.page
+++ b/site/index.page
@@ -3,6 +3,6 @@ DESCRIPTION: My superhighway
 IMAGE:
 URL: 
 TITLE: The information super highway
-HTML:
+CONTENT:
 
 Welcome to the amazing information superhighway3333
