--- a/site/1.css
+++ b/site/1.css
@@ -1,17 +1,19 @@
+@import url("https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600");
+
 body {
-
+  font-family: "IBM Plex Sans", system-ui, BlinkMacSystemFont, Helvetica, sans-serif;
+  font-weight: 400;
+  line-height: 2rem;
+  font-size: 1.3rem;
+  margin: 0;
+  overflow-x: none;
 }
 
-div {
-      font-size: 1.4rem;
-    line-height: 1.4;
-}
+code { font-family: menlo; }
 
-header {
-
+.header2 {
   background-image: linear-gradient(90deg, #cccccc 6.25%, #fffce3 6.25%, #fffce3 50%, #cccccc 50%, #cccccc 56.25%, #fffce3 56.25%, #fffce3 100%);
   background-size: 16.00px 16.00px;
-  
   color: #222222;
   text-shadow: 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3;
   
@@ -26,6 +28,107 @@ header {
 }
 
 article {
+  display: flex;
+  flex-direction: column;
   margin: 0 auto;
+}
+
+:root {
+  --theme-color: #99dfff;
+}
+
+a {
+  color: #1194ad;
+}
+
+header {
+  background: var(--theme-color);
+  margin-top: 0;
+  margin-bottom: 16px;
+}
+
+header h1 {
+  font-size: 2.5rem;
+  line-height: 1.2;
+  font-weight: 400;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+header h1 + h2 {
+  margin-top: 24px;
+  font-size: 1.3rem;
+  font-weight: 400;
+  opacity: 0.7;
+  margin-bottom: 1.4em;
+}
+
+header .sub {
+  text-transform: uppercase;
+  font-size: 1rem;
+  margin-bottom: 24px;
+  opacity: 0.7;
+  font-weight: 600;
+  margin-top: 22px;
+}
+
+header .byline {
+  font-size: 1rem;
+}
+
+blockquote {
+  margin: 2rem 0;
+  padding-left: 11px;
+  margin-left: -14px;
+  color: #666;
+  border-left: 3px solid #999;
+}
+
+.content, header * {
   max-width: 50rem;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+.content h2 {
+  font-weight: 400;
+  font-size: 1.8rem;
+  display: inline-block;
+  border-bottom: 8px solid #eee;
+}
+
+#bgbar {
+  width: 100%;
+  height: 64px;
+  background: url(https://image.shutterstock.com/z/stock-vector-binary-code-digital-technology-data-sorting-from-chaos-to-system-artificial-intelligence-big-785530237.jpg);
+  background: url(https://image.shutterstock.com/z/stock-vector-abstract-halftone-black-and-white-chaotic-pattern-of-dots-monochrome-vector-background-1236366712.jpg);
+  background-size: cover;
+}
+
+#logo {
+  position: fixed;
+  top: 8px;
+  left: 8px;
+  background-color: #0079c1;
+  color: white;
+  text-align: center;
+  padding: 6px 16px;
+  font-style: italic;
+  box-shadow: 6px 6px 0px rgba(0, 121, 193, 0.4);
+}
+
+#logo img {
+  vertical-align: -4px;
+}
+
+#logo a {
+  color: white;
+  text-decoration: none;
+  font-weight: 400;
+}
+
+
+@media only screen and (max-device-width: 480px) {
 }
