--- a/site/1.css
+++ b/site/1.css
@@ -1,4 +1,31 @@
-@import url("https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600");
+/* ibm-plex-sans-regular - latin */
+@font-face {
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('IBM Plex Sans'), local('IBMPlexSans'),
+       url('/fonts/ibm-plex-sans-v6-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('/fonts/ibm-plex-sans-v6-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* ibm-plex-sans-600 - latin */
+@font-face {
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  font-weight: 600;
+  src: local('IBM Plex Sans SemiBold'), local('IBMPlexSans-SemiBold'),
+       url('/fonts/ibm-plex-sans-v6-latin-600.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('/fonts/ibm-plex-sans-v6-latin-600.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* ibm-plex-mono-regular - latin */
+@font-face {
+  font-family: 'IBM Plex Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: local('IBM Plex Mono'), local('IBMPlexMono'),
+       url('/fonts/ibm-plex-mono-v4-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('/fonts/ibm-plex-mono-v4-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
 
 body {
   font-family: "IBM Plex Sans", system-ui, BlinkMacSystemFont, Helvetica, sans-serif;
@@ -6,30 +33,13 @@ body {
   line-height: 2rem;
   font-size: 1.3rem;
   margin: 0;
-  overflow-x: none;
 }
 pre { margin-left: 0; padding: 0; }
-code { font-family: menlo, consolas, monaco, monospace; font-size: 0.8rem; line-height: 1.25rem; }
+code { font-family: "IBM Plex Mono", menlo, consolas, monaco, monospace; font-size: 0.8rem; line-height: 1.25rem; }
 
 .hljs {
   background-color: #e2f6ff !important;
   padding: 0px 16px !important;
-}
-
-.header2 {
-  background-image: linear-gradient(90deg, #cccccc 6.25%, #fffce3 6.25%, #fffce3 50%, #cccccc 50%, #cccccc 56.25%, #fffce3 56.25%, #fffce3 100%);
-  background-size: 16.00px 16.00px;
-  color: #222222;
-  text-shadow: 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3, 0px 0px 10px #fffce3;
-  
-  font-size: 48px;
-  padding: 20px;
-  text-align: center;
-  font-family: "helvetica neue";
-  font-weight: 500;
-  position: relative;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
 }
 
 article {
@@ -38,19 +48,18 @@ article {
   margin: 0 auto;
 }
 
-:root {
-  --theme-color: #99dfff;
-}
-
 a {
-  color: #1194ad;
+  color: #0079c1;
 }
 
 header {
-  background: var(--theme-color);
+  background: #b3e3ff;
   margin-top: 0;
   margin-bottom: 16px;
 }
+
+/* header {   background: url(https://image.shutterstock.com/z/stock-photo-blue-room-in-the-d-background-1043622814.jpg); }
+header * { color: white; } */
 
 header h1 {
   font-size: 2.5rem;
@@ -107,13 +116,12 @@ blockquote {
 #bgbar {
   width: 100%;
   height: 64px;
-  /* background: url(https://image.shutterstock.com/z/stock-vector-binary-code-digital-technology-data-sorting-from-chaos-to-system-artificial-intelligence-big-785530237.jpg);
-  background: url(https://image.shutterstock.com/z/stock-vector-abstract-halftone-black-and-white-chaotic-pattern-of-dots-monochrome-vector-background-1236366712.jpg); */
   background-size: cover;
 }
 
 #logo {
   position: fixed;
+  filter: grayscale(100%) brightness(145%);
   top: 8px;
   left: 8px;
   background-color: #0079c1;
@@ -122,18 +130,21 @@ blockquote {
   padding: 6px 16px;
   font-style: italic;
   box-shadow: 6px 6px 0px rgba(0, 121, 193, 0.4);
+  transition: 0.2s filter ease-in;
+}
+
+#logo:hover {
+  filter: none;
+}
+
+#logo a {
+  color: white;
+  text-decoration: none;
 }
 
 #logo img {
   vertical-align: -4px;
 }
 
-#logo a {
-  color: white;
-  text-decoration: none;
-  font-weight: 400;
-}
-
-
-@media only screen and (max-device-width: 480px) {
-}
+/* @media only screen and (max-device-width: 480px) {
+} */
