--- a/site/1.css
+++ b/site/1.css
@@ -113,6 +113,84 @@ blockquote {
   border-bottom: 8px solid #eee;
 }
 
+hr.article_end {
+  border: 1px solid #E2E8F0;
+  margin: 40px 0;
+}
+
+.author_meta {
+  display: grid;
+  grid-template-columns: 120px 1fr;
+  grid-column-gap: 30px;
+  align-items: center;
+  margin-right: 20px;
+}
+
+.author_meta img {
+  border-radius: 50%;
+  height: 120px;
+  box-shadow: inset 1px 0px 5px rgba(0,0,0,1);
+  border:2px solid #eee;
+}
+
+.author_meta h4 {
+  text-transform: uppercase;
+  color: #A0AEC0;
+  font-weight: 300;
+  font-size: 15px;
+  letter-spacing: 0.05em;
+  margin: 0;
+}
+
+.twitter {
+  width: 24px;
+  height: 24px;
+}
+
+.twitter > path {
+  fill: #A0AEC0;
+}
+
+.twitter:hover > path {
+  fill: #63B3ED;
+}
+
+.author_meta h2 {
+  margin: 5px 0;
+  font-size: 1.6rem;
+  font-weight: bold;
+  border-bottom: none;
+}
+
+.author_meta p {
+  margin: 7px 0;
+  font-size: 0.9rem;
+  line-height: 1.35rem;
+}
+
+hr.promo_line {
+  border: 2px solid #b3e3ff;
+  margin: 40px 0;
+}
+
+.promo {
+  display: grid;
+  grid-template-columns: 120px 1fr;
+  grid-column-gap: 30px;
+  align-items: center;
+  margin-bottom: 50px;
+}
+
+.promo img {
+  width: 100%;
+}
+
+.promo h2 {
+  font-weight: bold;
+  border-bottom: none;
+  line-height: 0.5rem;
+}
+
 #bgbar {
   width: 100%;
   height: 64px;
