--- a/site/1.css
+++ b/site/1.css
@@ -34,7 +34,7 @@ body {
   font-size: 1.3rem;
   margin: 0;
 }
-pre { margin-left: 0;  }
+pre { margin-left: 0; max-width: 90vw; overflow: hidden; overflow-x: scroll; }
 code { font-family: "IBM Plex Mono", menlo, consolas, monaco, monospace; font-size: 0.8em; line-height: 1.25rem;  }
 
 pre code {
