--- a/site/1.css
+++ b/site/1.css
@@ -236,5 +236,15 @@ header figure img {
   max-width: 100px;
 }
 
-/* @media only screen and (max-device-width: 480px) {
-} */
+@media only screen and (max-width: 640px) {
+  html { 
+      font-size: 0.9em;
+  }
+}
+
+
+@media only screen and (max-width: 540px) {
+  html { 
+      font-size: 0.85em;
+  }
+}
