--- a/site/1.css
+++ b/site/1.css
@@ -34,6 +34,13 @@ body {
   font-size: 1.3rem;
   margin: 0;
 }
+
+/* Homepage only styles */
+.home header { background: #007ac7; }
+.header-brand { margin: 0 auto; }
+
+/* End of Homepage only styles */
+
 pre { margin-left: 0; max-width: 90vw; overflow: hidden; overflow-x: scroll; }
 code { font-family: "IBM Plex Mono", menlo, consolas, monaco, monospace; font-size: 0.8em; line-height: 1.25rem;  }
 
