--- a/site/1.css
+++ b/site/1.css
@@ -36,8 +36,10 @@ body {
 }
 
 /* Homepage only styles */
-.home header { background: #007ac7; padding: 10px 0; }
+.home header { background: #007ac7; padding: 10px 0; margin: 0; }
 .header-brand { margin: 0 auto; text-align: center; }
+
+.home article { display: block; }
 
 /* End of Homepage only styles */
 
