--- a/site/1.css
+++ b/site/1.css
@@ -42,9 +42,9 @@ body {
 .home article { display: grid; margin: 0 auto; grid-template-columns: 1fr 2fr; grid-column-gap: 20px; margin-bottom: 30px; }
 .home .top-story img {width: 100%; height: auto; }
 
-article img { height: 100px; width: 100%; object-fit: cover; }
+.home article img { height: 100px; width: 100%; object-fit: cover; }
 
-article.top-story { display: grid; margin: 0 auto; grid-template-rows: auto 1fr; grid-template-columns: none; }
+.home article.top-story { display: grid; margin: 0 auto; grid-template-rows: auto 1fr; grid-template-columns: none; }
 
 .top-story h1 {
   font-size: 2.5rem;
