--- a/site/1.css
+++ b/site/1.css
@@ -44,7 +44,7 @@ body {
 
 .home article img { height: 100px; width: 100%; object-fit: cover; }
 
-.home article.top-story { display: grid; margin: 0 auto; grid-template-rows: auto 1fr; grid-template-columns: none; }
+.home article .top-story { display: grid; margin: 0 auto; grid-template-rows: auto 1fr; grid-template-columns: none; }
 
 .top-story h1 {
   font-size: 2.5rem;
@@ -93,7 +93,7 @@ body {
   margin-bottom: 0;
 }
 
-.home article .byline, .byline a {
+.home article .byline, .home .byline a {
   font-size: 0.8rem;
   color: #666;
   margin: 0;
